--- a/content.html
+++ b/content.html
@@ -36,6 +36,28 @@
             <li><code>&lt;p&gt;</code>: Defines a paragraph.
                 <p>Sample Paragraph</p>
             </li>
+            <section>
+                <h2>Adding Video</h2>
+                <p>You can use the <code>&lt;video&gt;</code> tag to include video content in your web page.</p>
+                <video width="320" height="180" controls>
+                    <source src="HTML 101 By Ahad.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </section>
+            
+            <section>
+                <h2>Embedding YouTube Video</h2>
+                <p>You can embed a YouTube video using an <code>&lt;iframe&gt;</code> tag.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GUrDI6OkJfU?si=WuGwSTxo2MhW_Qg3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section>
+                <h2>Adding Audio</h2>
+                <p>You can use the <code>&lt;audio&gt;</code> tag to embed audio content in your web page.</p>
+                <audio controls>
+                    <source src="Hello There (Obi Wan) - Sound Effect (HD).mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+            </section>
             <li><code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>: Defines headings of various levels.
                 <h1>Heading 1</h1>
                 <h2>Heading 2</h2>
@@ -73,19 +95,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Mosharraf Karim</td>
-                            <td>51</td>
-                            <td>Bangladesh</td>
+                            <td>Elon Reeve Musk</td>
+                            <td>52</td>
+                            <td>South Africa</td>
                         </tr>
                         <tr>
-                            <td>Akshay Kumar</td>
-                            <td>56</td>
-                            <td>Canada</td>
+                            <td>Jeff Bezos</td>
+                            <td>60</td>
+                            <td>USA</td>
                         </tr>
                         <tr>
-                            <td>Jackie Chan</td>
-                            <td>70</td>
-                            <td>Hong Kong</td>
+                            <td>Bill Gates</td>
+                            <td>68</td>
+                            <td>USA</td>
                         </tr>
                         <tr>
                             <td>Gong Yoo</td>
@@ -93,9 +115,9 @@
                             <td>South Korea</td>
                         </tr>
                         <tr>
-                            <td>Daniel Radcliffe</td>
-                            <td>34</td>
-                            <td>England</td>
+                            <td>Mark Zuckerberg</td>
+                            <td>39</td>
+                            <td>USA</td>
                         </tr>
                         <tr>
                             <td>Tom Cruise</td>
